2008-11-06  David Edelsohn  <edelsohn@gnu.org>

	PR target/26397
	* config/rs6000/aix.h (LIBSTDCXX_STATIC): Define.
	
2008-11-06  Kazu Hirata  <kazu@codesourcery.com>

	PR target/35574
	* config/sparc/constraints.md (D): New.
	* config/sparc/predicates.md (const_double_or_vector_operand):
	New.
	* config/sparc/sparc.c (sparc_extra_constraint_check): Handle the
	'D' constraint.
	* config/sparc/sparc.md (*movdf_insn_sp32_v9, *movdf_insn_sp64):
	Use the 'D' constraint in addition to 'F' in some alternatives.
	(DF splitter): Generalize for V64mode.
	* doc/md.texi (SPARC): Document the 'D' constraint.

2008-11-06  Uros Bizjak  <ubizjak@gmail.com>

	* reg-stack.c (reg_to_stack): Generate +QNaN using real_nan.

2008-11-06  Ben Elliston  <bje@au.ibm.com>

	* gcc.c: Remove ancient comment about a bug in Sun cc.

2008-11-05  Janis Johnson  <janis187@us.ibm.com>

	* doc/sourcebuild.texi (Torture Tests): Add ADDITIONAL_TORTURE_OPTIONS.

2008-11-06  Ben Elliston  <bje@au.ibm.com>	

	* config/rs6000/rs6000.c (rs6000_override_options): Comment fix.

2008-11-06  Ben Elliston  <bje@au.ibm.com>

	* config/rs6000/rs6000.opt (mwarn-cell-microcode): Improve option
	description.

2008-11-05  Hans-Peter Nilsson  <hp@axis.com>

	PR target/38016
	* config/cris/cris.c (cris_order_for_addsi3): Test for !REG_P, not
	just MEM_P.

2008-11-05  Martin Jambor  <mjambor@suse.cz>

	PR middle-end/37861
	* tree-ssa-forwprop.c (forward_propagate_addr_expr_1): Don't turn
	pointer arithmetics into array_ref if the array is accessed
	through an indirect_ref.

2008-11-05  Richard Guenther  <rguenther@suse.de>

	PR middle-end/37742
	* tree-ssa.c (useless_type_conversion_p_1): Check different restrict
	qualified pointer conversion before stripping qualifiers.
	* gimplify.c (create_tmp_from_val): Use correctly qualified type.
	* tree-flow.h (may_propagate_address_into_dereference): Declare.
	* tree-ssa-ccp.c (may_propagate_address_into_dereference): New
	function.
	(ccp_fold): Use it.